--- a/ChatApp/app/src/main/res/layout/activity_login.xml
+++ b/ChatApp/app/src/main/res/layout/activity_login.xml
@@ -37,6 +37,7 @@
         android:layout_marginRight="15dp"
         android:background="@drawable/edit_background"
         android:hint="Password"
+        android:inputType="textPassword"
         android:paddingLeft="20dp" />
 
     <Button
