--- a/ChatApp/app/src/main/res/layout/activity_sign_up.xml
+++ b/ChatApp/app/src/main/res/layout/activity_sign_up.xml
@@ -43,6 +43,7 @@
         android:hint="Email"
         android:background="@drawable/edit_background"
         android:paddingLeft="20dp"
+        android:inputType="text"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="10dp"/>
