--- a/DOBCalculate/app/src/main/res/values/colors.xml
+++ b/DOBCalculate/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="textBlue">#1539BC</color>
+    <color name="bgColor">#bfbb40</color>
+    <color name="bgText">#5ad86d</color>
+    <color name="light_gray">#efefef</color>
+    <color name="grey">#90a4ae</color>
+    <color name="red">#E91E63</color>
 </resources>
