--- a/DOBCalculate/app/src/main/res/layout/activity_calculator.xml
+++ b/DOBCalculate/app/src/main/res/layout/activity_calculator.xml
@@ -22,208 +22,229 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
         <Button
             android:id="@+id/btn7"
-            android:textSize="40dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="7"
-            android:onClick="onDigit"
             android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:onClick="onDigit"
+            android:text="7"
+            android:textSize="40dp"
             tools:ignore="UsingOnClickInXml" />
+
         <Button
             android:id="@+id/btn8"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_margin="2dp"
             android:layout_weight="1"
+            android:onClick="onDigit"
             android:text="8"
             android:textSize="40dp"
-            android:onClick="onDigit"
-            android:layout_margin="2dp"
             tools:ignore="UsingOnClickInXml" />
+
         <Button
             android:id="@+id/btn9"
-            android:layout_margin="2dp"
             android:layout_width="0dp"
-            android:textSize="40dp"
             android:layout_height="match_parent"
+            android:layout_margin="2dp"
             android:layout_weight="1"
             android:onClick="onDigit"
             android:text="9"
+            android:textSize="40dp"
             tools:ignore="UsingOnClickInXml" />
+
         <Button
             android:id="@+id/divide"
-            android:textSize="40dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="/"
-            android:onClick="onOperator"
             android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:onClick="onOperator"
+            android:text="/"
+            android:textSize="40dp"
             tools:ignore="UsingOnClickInXml" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
         <Button
             android:id="@+id/btn4"
             android:layout_width="0dp"
-            android:textSize="40dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="4"
-            android:onClick="onDigit"
             android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:onClick="onDigit"
+            android:text="4"
+            android:textSize="40dp"
             tools:ignore="UsingOnClickInXml" />
+
         <Button
             android:id="@+id/btn5"
             android:layout_width="0dp"
-            android:textSize="40dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="5"
-            android:onClick="onDigit"
             android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:onClick="onDigit"
+            android:text="5"
+            android:textSize="40dp"
             tools:ignore="UsingOnClickInXml" />
+
         <Button
             android:id="@+id/btn6"
-            android:layout_margin="2dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_margin="2dp"
             android:layout_weight="1"
-            android:textSize="40dp"
             android:onClick="onDigit"
             android:text="6"
+            android:textSize="40dp"
             tools:ignore="UsingOnClickInXml" />
+
         <Button
             android:id="@+id/multiply"
             android:layout_width="0dp"
-            android:textSize="40dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="*"
-            android:onClick="onOperator"
             android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:onClick="onOperator"
+            android:text="*"
+            android:textSize="40dp"
             tools:ignore="UsingOnClickInXml" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
         <Button
             android:id="@+id/btn1"
             android:layout_width="0dp"
-            android:textSize="40dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="1"
-            android:onClick="onDigit"
             android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:onClick="onDigit"
+            android:text="1"
+            android:textSize="40dp"
             tools:ignore="UsingOnClickInXml" />
+
         <Button
             android:id="@+id/btn2"
             android:layout_width="0dp"
-            android:textSize="40dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="2"
-            android:onClick="onDigit"
             android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:onClick="onDigit"
+            android:text="2"
+            android:textSize="40dp"
             tools:ignore="UsingOnClickInXml" />
+
         <Button
             android:id="@+id/btn3"
-            android:layout_margin="2dp"
-            android:textSize="40dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_margin="2dp"
             android:layout_weight="1"
             android:onClick="onDigit"
             android:text="3"
+            android:textSize="40dp"
             tools:ignore="UsingOnClickInXml" />
+
         <Button
             android:id="@+id/add"
-            android:textSize="40dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="+"
-            android:onClick="onOperator"
             android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:onClick="onOperator"
+            android:text="+"
+            android:textSize="40dp"
             tools:ignore="UsingOnClickInXml" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:textSize="40dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:orientation="horizontal"
-        android:layout_weight="1">
+        android:textSize="40dp">
+
         <Button
             android:id="@+id/dot"
-            android:layout_margin="2dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_margin="2dp"
             android:layout_weight="1"
-            android:textSize="40dp"
             android:onClick="onDecimalPoint"
             android:text="."
+            android:textSize="40dp"
             tools:ignore="UsingOnClickInXml" />
-      <Button
+
+        <Button
             android:id="@+id/btn0"
-            android:layout_margin="2dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_margin="2dp"
             android:layout_weight="1"
-          android:textSize="40dp"
             android:onClick="onDigit"
             android:text="0"
+            android:textSize="40dp"
             tools:ignore="UsingOnClickInXml" />
+
         <Button
             android:id="@+id/clear_text"
-            android:layout_margin="2dp"
-            android:textSize="40dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_margin="2dp"
             android:layout_weight="1"
             android:onClick="onClear"
-            android:textColor="@color/red"
             android:text="cl"
+            android:textColor="@color/red"
+            android:textSize="40dp"
             tools:ignore="UsingOnClickInXml" />
+
         <Button
             android:id="@+id/subtraction"
-            android:layout_margin="2dp"
-            android:textSize="40dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_margin="2dp"
             android:layout_weight="1"
             android:onClick="onOperator"
             android:text="-"
+            android:textSize="40dp"
             tools:ignore="UsingOnClickInXml" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_weight="1"
 
-        android:layout_weight="1">
+        android:orientation="horizontal">
+
         <Button
             android:id="@+id/equal"
-            android:layout_margin="2dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_margin="2dp"
             android:layout_weight="1"
-            android:textSize="60dp"
             android:onClick="onEqual"
             android:text="="
+            android:textSize="60dp"
             tools:ignore="UsingOnClickInXml" />
 
     </LinearLayout>
