--- a/QuizApp/app/src/main/res/layout/activity_quiz_question.xml
+++ b/QuizApp/app/src/main/res/layout/activity_quiz_question.xml
@@ -31,7 +31,7 @@
           android:layout_height="wrap_content"
           android:id="@+id/iv_image"
           android:layout_marginTop="16dp"
-          android:contentDescription="Quize Image"
+          android:contentDescription="Quiz Image"
           tools:src="@drawable/kh"/>
       <LinearLayout
           android:layout_width="match_parent"
